# 3D_Object_Rotation_Tracking

./: CMakeLists.txt  README.md  input.txt  main.cpp
ObjectRotator/: EMEstimator.cpp  ObjectRotator.cpp  ObjectRotator.h  cameraCalibration.cpp  cameraCalibration.h  cvRANSAC.cpp  cvRANSAC.h  extractRotationMatrix.cpp  extractRotationMatrix.h  kalmanForRotMat.cpp  kalmanForRotMat.h
detectionlib/: Makefile  SPaRTa.c  SPaRTaSSE.c  cmake_install.cmake  ferns.cpp  ferns.h  objectdetector.cpp  objectdetector.h
input/8faces/: 2.jpg.database  6.jpg.database
input/binarycode/: 5.jpg.database  6.jpg.database
input/binarycode640480/: 3.jpg.database  5.jpg.database
input/car/: 1.jpg.database  3.jpg.database  4.jpg.database
input/dragon/: 1.jpg.database  2.jpg.database  3.jpg.database  4.jpg.database
input/medcine/: 01.jpg.database  02.jpg.database  04.jpg.database  06.jpg.database
input/starcube/: 1.jpg.database  3.jpg.database  4.jpg.database
input/starcube640480/: 2.jpg.database
shaders/: fragmentShader.fs
vivalib/: viva.cpp
